2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-1.

2011-10-15  6.7.3-1 Cristy  <quetzlzacatenango@image...>
  * Read TIFF EXIF profile before reading the image data.

2011-10-09  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-0.

2011-10-09  6.7.3-0 Cristy  <quetzlzacatenango@image...>
  * Generate output for caption:"[!]" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19589.

2011-10-05  6.7.3-0 Glenn Randers-Pehrson <glennrp@image...>
  * Add "png:format" property with possible values png8, png24, and png32,
    for use when prepending the format type to the filename is not convenient
    or is not possible, e.g., when embedding the PNG in a PNG-encoded ICO.

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-10.

2011-10-04  6.7.2-10 Cristy  <quetzlzacatenango@image...>
  * Remove most of the LLVM compiler warnings.
  * Fix bug in -evaluate-sequence multiply (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19549).
  * Upgrade to sRGB V4 ICC profile (reference
    http://www.color.org/srgbprofiles.xalter).
  * Distinguish embedded PNG vs BMP within the MicroSoft ICON image format.

2011-09-30  6.7.2-10 Glenn Randers-Pehrson <glennrp@image...>
  * Recognize the sRGB version 4 ICC profile and write PNG sRGB chunk instead.
  * Use crc32 instead of "sRGB" string to recognize certain sRGB profiles.

2011-09-26  6.7.2-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-9.

2011-09-26  6.7.2-9 Cristy  <quetzlzacatenango@image...>
  * Fix race condition on image rotate @ 90 degrees.

2011-09-25  6.7.2-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-8.

2011-09-20  6.7.2-8 Cristy  <quetzlzacatenango@image...>
  * Prevent infinite loop when font is too large for specified width (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19502).